--- a/app/src/main/res/drawable/gen1.xml
+++ b/app/src/main/res/drawable/gen1.xml
@@ -4,13 +4,18 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
             <solid android:color="@color/pokemonRed" />
+            <corners android:radius="1000dp"></corners>
         </shape>
+
     </item>
     <item android:end="50dip">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle" >
             <solid android:color="@color/pokemonBlue" />
+            <corners android:radius="1000dp"></corners>
         </shape>
     </item>
+
+
 
 </layer-list>
