--- a/app/src/main/res/layout/activity_pokedex.xml
+++ b/app/src/main/res/layout/activity_pokedex.xml
@@ -7,12 +7,14 @@
     tools:context=".ui.Pokedex">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPokedex"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
+        android:background="@drawable/fondopokedex"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
