Pokedex Data Type

--- a/app/src/main/res/layout/activity_pokedex_data.xml
+++ b/app/src/main/res/layout/activity_pokedex_data.xml
@@ -14,7 +14,6 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto_mono"
-        android:text="Pokemon"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#2E2A2D"
         app:layout_constraintStart_toStartOf="parent"
@@ -212,23 +211,29 @@
 
     <TextView
         android:id="@+id/tvTypePrimary"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="124dp"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="156dp"
         android:fontFamily="@font/roboto_mono"
-        android:textColor="#000000"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvTypeSecundary"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto_mono"
-        android:textColor="#000000"
+        android:gravity="center"
+        android:shadowColor="#FFFFFF"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvTypePrimary"
         app:layout_constraintStart_toEndOf="@+id/tvTypePrimary"
