--- a/app/src/main/res/layout/activity_pokedex_data.xml
+++ b/app/src/main/res/layout/activity_pokedex_data.xml
@@ -61,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
+        android:background="#00FFFFFF"
         android:fontFamily="@font/roboto_mono"
         android:text="Speed: "
         android:textColor="#000000"
@@ -218,8 +219,8 @@
         android:layout_marginEnd="156dp"
         android:fontFamily="@font/roboto_mono"
         android:gravity="center"
-        android:textColor="#FFFFFF"
 
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -238,5 +239,26 @@
         app:layout_constraintBottom_toBottomOf="@+id/tvTypePrimary"
         app:layout_constraintStart_toEndOf="@+id/tvTypePrimary"
         app:layout_constraintTop_toTopOf="@+id/tvTypePrimary" />
+
+    <View
+        android:id="@+id/splashScreen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/fondosplashscreen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progresBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/splashScreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
