--- a/app/src/main/res/layout/item_bolsa.xml
+++ b/app/src/main/res/layout/item_bolsa.xml
@@ -21,8 +21,10 @@
 
     <TextView
         android:id="@+id/nItem"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:text="@string/IT"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="@+id/imagenItem"
