--- a/app/src/main/res/layout/activity_pokedex_data.xml
+++ b/app/src/main/res/layout/activity_pokedex_data.xml
@@ -241,7 +241,7 @@
         app:layout_constraintTop_toTopOf="@+id/tvTypePrimary" />
 
     <View
-        android:id="@+id/splashScreen"
+        android:id="@+id/vSplashPokedexData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/fondosplashscreen"
@@ -251,12 +251,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progresBar"
+        android:id="@+id/pbSplashPokedexData"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/splashScreen"
+        app:layout_constraintBottom_toBottomOf="@+id/vSplashPokedexData"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent" />
