--- a/app/src/main/res/layout/item_bolsa.xml
+++ b/app/src/main/res/layout/item_bolsa.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/IT"
+        android:fontFamily="@font/roboto_mono"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="@+id/imagenItem"
         app:layout_constraintEnd_toEndOf="parent"
