--- a/app/src/main/res/layout/activity_pokedex_data.xml
+++ b/app/src/main/res/layout/activity_pokedex_data.xml
@@ -50,7 +50,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="124dp"
         android:fontFamily="@font/roboto_mono"
-        android:text="HP: "
+        android:text="@string/hp"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +63,7 @@
         android:layout_marginStart="84dp"
         android:background="#00FFFFFF"
         android:fontFamily="@font/roboto_mono"
-        android:text="Speed: "
+        android:text="@string/speed"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/tvHP"
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/roboto_mono"
-        android:text="Attack: "
+        android:text="@string/attack"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/tvHP"
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono"
-        android:text="Sp Attack: "
+        android:text="@string/spAtt"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/tvSpeed"
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/roboto_mono"
-        android:text="Defense: "
+        android:text="@string/defense"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/tvAtt"
@@ -109,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono"
-        android:text="Sp Defense: "
+        android:text="@string/spDef"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/tvSAtt"
