--- a/app/src/main/res/layout/activity_pokedex_menu.xml
+++ b/app/src/main/res/layout/activity_pokedex_menu.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="48dp"
         android:background="@drawable/g1"
         android:fontFamily="@font/roboto_mono"
-        android:text="I"
+        android:text="@string/i"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="50dp"
         android:background="@drawable/g2"
         android:fontFamily="@font/roboto_mono"
-        android:text="II"
+        android:text="@string/ii"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="@+id/btFirstGen"
@@ -43,7 +43,7 @@
         android:layout_marginEnd="100dp"
         android:background="@drawable/g3"
         android:fontFamily="@font/roboto_mono"
-        android:text="III"
+        android:text="@string/iii"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="@+id/btSecondGen"
@@ -58,7 +58,7 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/g4"
         android:fontFamily="@font/roboto_mono"
-        android:text="IV"
+        android:text="@string/iv"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="@+id/btFirstGen"
@@ -70,7 +70,7 @@
         android:layout_height="50dp"
         android:background="@drawable/g5"
         android:fontFamily="@font/roboto_mono"
-        android:text="V"
+        android:text="@string/v"
         android:textColor="@android:color/secondary_text_dark"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="@+id/btSecondGen"
@@ -82,7 +82,7 @@
         android:layout_height="50dp"
         android:background="@drawable/g6"
         android:fontFamily="@font/roboto_mono"
-        android:text="VI"
+        android:text="@string/vi"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="@+id/btThirdGen"
@@ -95,7 +95,7 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/g7"
         android:fontFamily="@font/roboto_mono"
-        android:text="VII"
+        android:text="@string/vii"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="@+id/btFourthGen"
@@ -107,7 +107,7 @@
         android:layout_height="50dp"
         android:background="@drawable/g8"
         android:fontFamily="@font/roboto_mono"
-        android:text="VIII"
+        android:text="@string/viii"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="@+id/btFifthGen"
