--- a/app/src/main/res/layout/activity_bolsa_data.xml
+++ b/app/src/main/res/layout/activity_bolsa_data.xml
@@ -24,7 +24,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="15dp"
-        android:text="@string/nomI"
+        android:fontFamily="@font/roboto_mono"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +34,7 @@
         android:layout_width="400dp"
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
-        android:text="@string/desI"
+        android:fontFamily="@font/roboto_mono"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="24sp"
@@ -46,17 +46,18 @@
         android:id="@+id/tvCategoryI"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="412dp"
         android:layout_marginTop="40dp"
-        android:text="Descripcion"
+        android:fontFamily="@font/roboto_mono"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.663"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -66,17 +67,18 @@
         app:srcCompat="@drawable/ic_error" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginBottom="50dp"
-        android:text="This screen has not been translated yet "
+        android:fontFamily="@font/roboto_mono"
+        android:text="@string/errorString"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/ivError" />
 
     <View
         android:id="@+id/vSplashBolsaData"
