--- a/app/src/main/res/layout/activity_trivial.xml
+++ b/app/src/main/res/layout/activity_trivial.xml
@@ -6,23 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.Trivial">
 
-    <Button
-        android:id="@+id/btOpTres"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:background="@drawable/quiz"
-        android:fontFamily="@font/roboto_mono"
-        app:layout_constraintStart_toEndOf="@+id/btOpDos"
-        app:layout_constraintTop_toTopOf="@+id/btOpDos" />
-
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/bangers"
-        android:text="Who Thats Pokemon"
+        android:text="@string/title"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,12 +54,22 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:id="@+id/btOpTres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:background="@drawable/quiz"
+        android:fontFamily="@font/roboto_mono"
+        app:layout_constraintStart_toEndOf="@+id/btOpDos"
+        app:layout_constraintTop_toTopOf="@+id/btOpDos" />
+
+    <Button
         android:id="@+id/btNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/cornerboton"
         android:fontFamily="@font/roboto_mono"
-        android:text="Next"
+        android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/roboto_mono"
-        android:text="Score:"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
