--- a/app/src/main/res/layout/item_pokedex.xml
+++ b/app/src/main/res/layout/item_pokedex.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Pokemon"
+        android:fontFamily="@font/roboto_mono"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/ibFotoPokedex"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="340dp"
-        android:text="#"
+        android:fontFamily="@font/roboto_mono"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
