--- a/app/src/main/res/layout/item_bolsa.xml
+++ b/app/src/main/res/layout/item_bolsa.xml
@@ -23,10 +23,11 @@
         android:id="@+id/nItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="128dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/roboto_mono"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/imagenItem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imagenItem"
