--- a/app/src/main/res/layout/activity_pokedex_data.xml
+++ b/app/src/main/res/layout/activity_pokedex_data.xml
@@ -60,7 +60,7 @@
         android:id="@+id/tvSpeed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
+        android:layout_marginStart="105dp"
         android:background="#00FFFFFF"
         android:fontFamily="@font/roboto_mono"
         android:text="@string/speed"
@@ -121,6 +121,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvHP"
         app:layout_constraintStart_toEndOf="@+id/tvHP"
         app:layout_constraintTop_toTopOf="@+id/tvHP" />
@@ -131,6 +132,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvSpeed"
         app:layout_constraintStart_toEndOf="@+id/tvSpeed"
         app:layout_constraintTop_toTopOf="@+id/tvSpeed"
@@ -142,6 +144,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvAtt"
         app:layout_constraintStart_toEndOf="@+id/tvAtt"
         app:layout_constraintTop_toTopOf="@+id/tvAtt" />
@@ -152,6 +155,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvSAtt"
         app:layout_constraintStart_toEndOf="@+id/tvSAtt"
         app:layout_constraintTop_toTopOf="@+id/tvSAtt" />
@@ -162,6 +166,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvDfn"
         app:layout_constraintStart_toEndOf="@+id/tvDfn"
         app:layout_constraintTop_toTopOf="@+id/tvDfn" />
@@ -172,6 +177,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvSDfn"
         app:layout_constraintStart_toEndOf="@+id/tvSDfn"
         app:layout_constraintTop_toTopOf="@+id/tvSDfn" />
