--- a/app/src/main/res/layout/activity_trivial.xml
+++ b/app/src/main/res/layout/activity_trivial.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondotrival"
     tools:context=".ui.Trivial">
 
     <TextView
